# Lab07

./: CMakeLists.txt  Examples.md  main.cpp
SCARA Simulator/: error log.txt  readme.txt  robot commands.txt
windsurf_build/: CMakeCache.txt  Makefile  cmake_install.cmake
